# SanaMovil

./: .gitignore  Commit.txt  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/g022/sanamovil/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: medgemma ira aqui.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-llama.cpp
app/src/main/cpp/whisper/: CMakeLists.txt
app/src/main/java/com/g022/sanamovil/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/g022/sanamovil/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
